[package]
version = "0.1.0"
name = "aurpc"
description = "Asynchronous UDP RPCs"
readme = "README.md"

authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
documentation = "https://docs.rs/aurpc"
repository = "https://git.ureeves.com/ureeves/aurpc"

keywords = ["RPC", "UDP", "network"]
categories = ["network-programming"]

license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.6.1"
futures = "0.3.5"

[dev-dependencies]
async-std = { version = "1.6.1", features = ["attributes"] }
